...
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2b-CS-y8A">
                                <rect key="frame" x="92" y="508" width="230" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.010129943490028381" green="0.94685631990432739" blue="0.98426181077957153" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Start Quiz">
                                    <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="cCt-Xm-ujV"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="71" y="787" width="272" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Percentage" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCd-yA-dTY">
                                <rect key="frame" x="20" y="400" width="374" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Percentage"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mMH-Dk-Bhm">
                                <rect key="frame" x="59" y="492" width="297" height="63"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Restart"/>
                                <state key="normal" title="Restart the game?"/>
                                <connections>
                                    <action selector="restartquiz:" destination="Qr1-HD-Xu5" eventType="touchUpInside" id="2h9-oa-m1b"/>
                                    <segue destination="hGV-dk-XGe" kind="show" identifier="restartquiz" id="orX-OQ-oQK"/>
                                </connections>
                            </button>
                        </subviews>
...
